--- a/main.css
+++ b/main.css
@@ -4,6 +4,19 @@ body {
     font-family: "Poppins", sans-serif !important;
 }
 
+@media only screen and (max-width: 600px) {
+    .is-size-5 {
+      margin-inline: -3rem;
+    }
+  }
+
+.shop { 
+    height:300px;
+    min-width:255px;
+    width:max-content;
+}
+
+
 .center {
     display: flex;
     justify-content: center;
