--- a/main.css
+++ b/main.css
@@ -16,6 +16,18 @@ body {
     width:max-content;
 }
 
+.teamphoto {
+    border-radius: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+    .teamphoto {
+        border-radius: 20px;
+        width:120%;
+        margin-left: 0px !important;
+        margin-right: 0px !important;
+    }
+  }
 
 .center {
     display: flex;
